# text-analysis-ml

./: 1_텍스트_빈도_분석_실습 copy.ipynb  1_텍스트_빈도_분석_실습.ipynb  2_BERT_텍스트_분류.ipynb  3_BERTopic_토픽_모델링_1.ipynb  4_BERTopic_토픽_모델링_2.ipynb  99_텍스트분석_종합과제.ipynb  README.md  pyproject.toml  계획.md
data/: all_embeddings_2d.npy  movie_embeddings.npy  movie_embeddings_2d.npy  product_review_analysis_20251118_101800.json  쿠팡 리뷰 수집_7518948286.json
