[project]
name = "text-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "accelerate>=1.1.0",
    "datasets",
    "ipykernel",
    "jupyter>=1.1.1",
    "kiwipiepy==0.17.0",
    "numpy>=1.26,<2",
    "matplotlib",
    "networkx>=3.6.1",
    "pandas",
    "pillow",
    "pyvis>=0.3.2",
    "scikit-learn",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "tqdm",
    "transformers>=5.3.0",
    "wordcloud",
    "torchinfo>=1.8.0",
    "bertopic>=0.17.4",
    "sentence-transformers>=5.3.0",
    "umap-learn>=0.5.11",
    "hdbscan>=0.8.41",
    "plotly>=6.6.0",
    "nltk>=3.9.3",
]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cpu"]
index-strategy = "unsafe-best-match"
